--- a/optifine.html
+++ b/optifine.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CraftCore — JourneyMap Mod</title>
+  <title>CraftCore — OptiFine Mod</title>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * { box-sizing: border-box; }
@@ -57,6 +57,8 @@
       margin-bottom: 3.125rem;
       text-align: center;
       z-index: 1;
+      max-width: 26.25rem;
+      line-height: 1.5;
     }
     .card {
       background: rgba(42,42,66,0.85);
@@ -156,28 +158,28 @@
 <body>
   <div class="background-glow"></div>
   <h1>CraftCore</h1>
-  <h2>JourneyMap</h2>
-  <p class="subtitle">Мод для Minecraft с картой в реальном времени</p>
-  <div class="card" id="journeymap">
+  <h2>OptiFine</h2>
+  <p class="subtitle">Мод OptiFine улучшает производительность Minecraft, добавляет шейдеры и настройки графики.</p>
+  <div class="card" id="optifine">
     <div class="btn-group">
       <a href="index.html" class="btn">🏠 Главная</a>
     </div>
     <div class="btn-group">
-      <a href="download/JourneyMap-1.12.2.jar" download class="btn">Download JourneyMap 1.12.2</a>
-      <a href="download/JourneyMap-1.16.5.jar" download class="btn">Download JourneyMap 1.16.5</a>
-      <a href="download/JourneyMap-1.20.1.jar" download class="btn">Download JourneyMap 1.20.1</a>
+      <a href="download/OptiFine_1.12.2.jar" download class="btn">Download OptiFine 1.12.2</a>
+      <a href="download/OptiFine_1.16.5.jar" download class="btn">Download OptiFine 1.16.5</a>
+      <a href="download/OptiFine_1.20.1.jar" download class="btn">Download OptiFine 1.20.1</a>
     </div>
     <div class="like-container">
       <img src="icon/like.png" alt="Like" class="like-icon" id="likeIcon" />
       <span class="like-count" id="likeCount">0</span>
     </div>
-  </div>
+    </div>
   <footer>© 2025 CraftCore Project</footer>
   <script>
     (function() {
       const likeIcon = document.getElementById('likeIcon');
       const likeCount = document.getElementById('likeCount');
-      const pageId = 'journeymap';
+      const pageId = 'optifine';
       let initialLikes = parseInt(localStorage.getItem(`${pageId}_likes`)) || 0;
       let hasLiked = localStorage.getItem(`${pageId}_liked`) === 'true';
       function updateLikeUI() {
