--- a/xrayultimate.html
+++ b/xrayultimate.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CraftCore — JourneyMap Mod</title>
+  <title>CraftCore — Xray Ultimate Текстурпак</title>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * { box-sizing: border-box; }
@@ -57,6 +57,8 @@
       margin-bottom: 3.125rem;
       text-align: center;
       z-index: 1;
+      max-width: 26.25rem;
+      line-height: 1.5;
     }
     .card {
       background: rgba(42,42,66,0.85);
@@ -126,6 +128,51 @@
       font-size: 1.125rem;
       color: #eee;
     }
+    .preview-img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 0.75rem;
+      margin-top: 1.25rem;
+      box-shadow: 0 0 0.9375rem rgba(166, 76, 243, 0.4);
+      cursor: pointer;
+      z-index: 1;
+    }
+    .image-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      z-index: 100;
+      align-items: center;
+      justify-content: center;
+    }
+    .image-modal-content {
+      position: relative;
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 1rem;
+      box-shadow: 0 0 1.25rem rgba(166, 76, 243, 0.5);
+    }
+    .image-modal-content img {
+      max-width: 100%;
+      max-height: 80vh;
+      border-radius: 1rem;
+    }
+    .close-btn {
+      position: absolute;
+      top: -2rem;
+      right: -1.5rem;
+      font-size: 2rem;
+      color: #ccc;
+      cursor: pointer;
+      transition: color 0.3s ease;
+    }
+    .close-btn:hover {
+      color: #a64cf3;
+    }
     footer {
       color: #666;
       font-size: 0.875rem;
@@ -143,6 +190,8 @@
       .btn-group { gap: 0.5rem; flex-direction: column; }
       .like-icon { width: 1.5rem; height: 1.5rem; }
       .like-count { font-size: 1rem; }
+      .preview-img { margin-top: 1rem; }
+      .close-btn { font-size: 1.5rem; top: -1.5rem; right: -1rem; }
       footer { font-size: 0.75rem; }
     }
     @media (max-width: 480px) {
@@ -150,34 +199,43 @@
       h1 { font-size: 2rem; }
       .card { max-width: 100%; }
       .like-icon { width: 1.25rem; height: 1.25rem; }
+      .close-btn { font-size: 1.25rem; top: -1.25rem; right: -0.75rem; }
     }
   </style>
 </head>
 <body>
   <div class="background-glow"></div>
   <h1>CraftCore</h1>
-  <h2>JourneyMap</h2>
-  <p class="subtitle">Мод для Minecraft с картой в реальном времени</p>
-  <div class="card" id="journeymap">
+  <h2>Xray Ultimate</h2>
+  <p class="subtitle">Текстурпак, позволяющий видеть руды сквозь блоки в Minecraft</p>
+  <div class="card" id="xrayultimate">
     <div class="btn-group">
       <a href="index.html" class="btn">🏠 Главная</a>
     </div>
     <div class="btn-group">
-      <a href="download/JourneyMap-1.12.2.jar" download class="btn">Download JourneyMap 1.12.2</a>
-      <a href="download/JourneyMap-1.16.5.jar" download class="btn">Download JourneyMap 1.16.5</a>
-      <a href="download/JourneyMap-1.20.1.jar" download class="btn">Download JourneyMap 1.20.1</a>
+      <a href="download/Xray_Ultimate_1.12.2.zip" download class="btn">Download Xray Ultimate 1.12.2</a>
+      <a href="download/Xray_Ultimate_1.16.5.zip" download class="btn">Download Xray Ultimate 1.16.5</a>
+      <a href="download/Xray_Ultimate_1.20.1.zip" download class="btn">Download Xray Ultimate 1.20.1</a>
     </div>
     <div class="like-container">
       <img src="icon/like.png" alt="Like" class="like-icon" id="likeIcon" />
       <span class="like-count" id="likeCount">0</span>
     </div>
+    <img src="icon/Xray_ultimate_resource_pack.png" alt="Xray Ultimate Preview" class="preview-img" id="previewImg" />
+  </div>
+  <div class="image-modal" id="imageModal">
+    <div class="image-modal-content">
+      <span class="close-btn" id="closeImageModal">×</span>
+      <img src="icon/Xray_ultimate_resource_pack.png" alt="Xray Ultimate Preview" />
+    </div>
   </div>
   <footer>© 2025 CraftCore Project</footer>
   <script>
     (function() {
+      // Лайки
       const likeIcon = document.getElementById('likeIcon');
       const likeCount = document.getElementById('likeCount');
-      const pageId = 'journeymap';
+      const pageId = 'xrayultimate';
       let initialLikes = parseInt(localStorage.getItem(`${pageId}_likes`)) || 0;
       let hasLiked = localStorage.getItem(`${pageId}_liked`) === 'true';
       function updateLikeUI() {
@@ -196,6 +254,25 @@
         localStorage.setItem(`${pageId}_likes`, initialLikes);
         localStorage.setItem(`${pageId}_liked`, hasLiked);
         updateLikeUI();
+      });
+
+      // Модальное окно изображения
+      const previewImg = document.getElementById('previewImg');
+      const imageModal = document.getElementById('imageModal');
+      const closeImageModal = document.getElementById('closeImageModal');
+
+      previewImg.addEventListener('click', () => {
+        imageModal.style.display = 'flex';
+      });
+
+      closeImageModal.addEventListener('click', () => {
+        imageModal.style.display = 'none';
+      });
+
+      imageModal.addEventListener('click', (event) => {
+        if (event.target === imageModal) {
+          imageModal.style.display = 'none';
+        }
       });
     })();
   </script>
